Integrate xterm shell and key passphrase support

--- a/apps/ssh_client_app/pubspec.yaml
+++ b/apps/ssh_client_app/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
     path: ../../packages/core_vault
   core_ssh:
     path: ../../packages/core_ssh
+  ui_terminal:
+    path: ../../packages/ui_terminal
   uuid: ^4.5.1
   file_picker: ^8.1.2
   shared_preferences: ^2.3.2
