Ignore generated platform folders and build outputs

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,12 @@
 .idea/
 .vscode/
 build/
+apps/ssh_client_app/build/
+apps/ssh_client_app/android/
+apps/ssh_client_app/linux/
+apps/ssh_client_app/windows/
+apps/ssh_client_app/.metadata
+apps/ssh_client_app/test/
 coverage/
 pubspec.lock
 
