--- a/apps/ssh_client_app/pubspec.yaml
+++ b/apps/ssh_client_app/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   file_picker: ^8.1.2
   shared_preferences: ^2.3.2
   flutter_secure_storage: ^9.2.2
+  crypto: ^3.0.2
   path_provider: ^2.1.4
 
 dev_dependencies:
